kubernetes/k8s-tut/mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo-pod
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          volumeMounts:
            - mountPath: /data/db
              name: mongo-storage
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: mongo-srv
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
