kubernetes/k8s-tut/mongo-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-srv
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
