kubernetes/k8s-tut/server-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30005
